# projectm-debug

./: .gitmodules  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/projectm_debug/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/projectm_debug/: GLESLib.kt  GLESView.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/projectm_debug/: ExampleUnitTest.kt
distribution/libprojectM/include/projectM-4/: audio.h  callbacks.h  core.h  debug.h  memory.h  parameters.h  projectM.h  render_opengl.h  touch.h  types.h  version.h
gen-libs/: build.sh
gradle/wrapper/: gradle-wrapper.properties
